# infres2-2020

./: readme.md
alfred/headers/: configuration.h  linux_mountpoint_conflict.h  mountpoint.h  windows_service.h
alfred/installer/: CMakeLists.txt  conf.cfg.in  xxxxxDRP.in
alfred/installer/deb/: postinst  preinst
alfred/installer/nsis/: installer.nsi
alfred/sources/: CMakeLists.txt  configuration.cpp  linux_mountpoint.cpp  linux_mountpoint_conflict.cpp  linux_service.cpp  log.cpp  main.cpp  main_loop.cpp  windows_mountpoint.cpp  windows_service.cpp  windows_subprocess.cpp
alfred/sources/CMake/: ConfigureFileGenerate.cmake
alfred/sources/headers/: linux_service.h  log.h  main_loop.h  version.h.in  windows_subprocess.h
alfred/sources/installer/deb/: conffiles  triggers
alfred/sources/installer/rpm/: postinst  preinst
jimenez/injection/: conf.json  example.txt  pycount.py
jimenez/projet/: .gitignore  base.py  client.py  database.py  readme.md  server.py
jimenez/projet/client/: client.py  config.json
jimenez/projet/serveur/: config.json  server.py
